Parses json into objects
-brings in attributes for json to become objects

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,11 +1,11 @@
-<h2>Station's close to <%= @stations.zip_code %></h2>
+<%#<h2>Station's close to <%= @stations.zip_code %></h2>%>
 
-<div>
-<% @stations.each do |station| %>
- <p><%= station.name %></p>
- <p><%= station.address %></p>
- <p><%= station.fuel_types %></p>
- <p><%= station.distance %></p>
- <p><%= station.access_times %></p>
-<% end  %>
-</div>
+<%#<div>%>
+<%#<% @stations.each do |station| %>%>
+ <%#<p><%= station.name %></p>%>
+ <%#<p><%= station.address %></p>%>
+ <%#<p><%= station.fuel_types %></p>%>
+ <%#<p><%= station.distance %></p>%>
+ <%#<p><%= station.access_times %></p>%>
+<%#<% end  %>%>
+<%#</div>%>
